Fix strange word-wrap on iOS

--- a/assets/css/prismjs.scss
+++ b/assets/css/prismjs.scss
@@ -5,4 +5,5 @@
 
 .highlight > pre > code {
     display: inline-block;
+    word-wrap: normal;
 }
